2007-05-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/language-dialog.glade:
	Use gtk.Alignments to indent sections.

	* gaupol/gtk/dialogs/glade.py:
	* gaupol/gtk/dialogs/language.py:
	* gaupol/gtk/dialogs/message.py:
	* gaupol/gtk/dialogs/textedit.py:
	Add contracts and clean up code.

2007-05-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/output.py:
	Set 6 pixel margins to the text view.

2007-05-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/icons/logo.png:
	Remove file, use icon instead.

	* gaupol/gtk/dialogs/about.py:
	Add title, fix website label and use a named icon.

	* gaupol/gtk/dialogs/__init__.py:
	Comment out imports for now.

	* gaupol/urls.py (HOMEPAGE):
	Add trailing slash.

2007-05-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/register.py:
	* gaupol/agents/search.py:
	* gaupol/base/delegate.py:
	* gaupol/base/__init__.py:
	* gaupol/base/mutables.py:
	* gaupol/base/observable.py:
	* gaupol/base/singleton.py:
	* gaupol/calculator.py:
	* gaupol/clipboard.py:
	* gaupol/const.py:
	* gaupol/converter.py:
	* gaupol/determiner.py:
	* gaupol/enclib.py:
	* gaupol/files/__init__.py:
	* gaupol/files/ssa.py:
	* gaupol/files/subfile.py:
	* gaupol/finder.py:
	* gaupol/gtk/agents/menu.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/agents/update.py:
	* gaupol/gtk/app.py:
	* gaupol/gtk/cellrend/__init__.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/const.py:
	* gaupol/gtk/dialogs/debug.py:
	* gaupol/gtk/dialogs/encoding.py:
	* gaupol/gtk/dialogs/file.py:
	* gaupol/gtk/dialogs/glade.py:
	* gaupol/gtk/dialogs/insert.py:
	* gaupol/gtk/dialogs/language.py:
	* gaupol/gtk/dialogs/posadjust.py:
	* gaupol/gtk/dialogs/pref.py:
	* gaupol/gtk/dialogs/textedit.py:
	* gaupol/gtk/entries.py:
	* gaupol/gtk/lengthlib.py:
	* gaupol/gtk/page.py:
	* gaupol/gtk/util.py:
	* gaupol/__init__.py:
	* gaupol/langlib.py:
	* gaupol/liner.py:
	* gaupol/opts.py:
	* gaupol/parser.py:
	* gaupol/paths.py:
	* gaupol/project.py:
	* gaupol/reversion/action.py: