@@ -73,6 +73,9 @@ Gaupol 1.0
 Unscheduled Possibilities
 =========================
 
+ * GTK 2.12
+    - gtk.Tooltips: New API, that allows complex tooltips
+    - gtk.AboutDialog: "name" replaced with "program-name"
  * Interactive search
  * gedit-style message area
  * Document hidden settings (where?)
